test/unique/neg/local-object.check
local-object.scala:11: error: capability of right-hand side is not shared
    O.x = Some(x)
              ^
one error found
